routes/route-mysql-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mysql-route
  namespace: hackathon2023-prometheus
  uid: 7e9fc4e9-52f5-4fea-99fa-cb99c6d497c7
  resourceVersion: '153369090'
  creationTimestamp: '2023-05-17T03:30:47Z'
  labels:
    app: mysql
    app.kubernetes.io/component: mysql
    app.kubernetes.io/instance: mysql
    app.kubernetes.io/name: mysql
  managedFields:
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-05-17T03:30:47Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-05-29T08:45:14Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
spec:
  host: >-
    mysql-hackathon2023-prometheus.mycluster-wdc04-b3c-16x64-bcd9381b2e59a32911540577d00720d7-0000.us-east.containers.appdomain.cloud
  to:
    kind: Service
    name: mysql
    weight: 100
  port:
    targetPort: 3306-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        mysql-hackathon2023-prometheus.mycluster-wdc04-b3c-16x64-bcd9381b2e59a32911540577d00720d7-0000.us-east.containers.appdomain.cloud
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-05-17T03:30:47Z'
      wildcardPolicy: None
      routerCanonicalHostname: >-
        router-default.mycluster-wdc04-b3c-16x64-bcd9381b2e59a32911540577d00720d7-0000.us-east.containers.appdomain.cloud
