routes/route-travel-ui.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: travel-ui
  namespace: hackathon2023-prometheus
  uid: 30a074b3-effb-48c9-89ca-0be6d7623f35
  resourceVersion: '132196072'
  creationTimestamp: '2023-05-17T05:16:11Z'
  labels:
    app: nodejs-basic
    pod-template-hash: 7b4dfdc49f
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: kubectl-expose
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-05-17T05:16:11Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:pod-template-hash': {}
        'f:spec':
          'f:port': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-05-17T05:16:11Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-05-17T15:33:50Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:port':
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
spec:
  host: >-
    travel-ui-hackathon2023-prometheus.mycluster-wdc04-b3c-16x64-bcd9381b2e59a32911540577d00720d7-0000.us-east.containers.appdomain.cloud
  to:
    kind: Service
    name: travel-ui
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        travel-ui-hackathon2023-prometheus.mycluster-wdc04-b3c-16x64-bcd9381b2e59a32911540577d00720d7-0000.us-east.containers.appdomain.cloud
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-05-17T05:16:11Z'
      wildcardPolicy: None
      routerCanonicalHostname: >-
        router-default.mycluster-wdc04-b3c-16x64-bcd9381b2e59a32911540577d00720d7-0000.us-east.containers.appdomain.cloud
